deploy_scripts/springmysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: "springmysql-svc" 
  namespace: homeeee 
  annotations:
   prometheus.io/scrape: 'true'
   prometheus.io/port: "8090"
spec:
  type: ClusterIP
  ports:
  - name: jmx-exporter
    port: 8090
    protocol: TCP
    targetPort: 8090
    # nodePort: 30003
  - name : springmysql
    port: 80
    targetPort: 8080
  selector:
    app: springmysql
